sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: '(' expected but identifier found.
    if isSmaller(i+1,i){
       ^AlgCocktailSort1:11: error: illegal start of simple expression
  }
  ^AlgCocktailSort1:13: error: '(' expected but identifier found.
    if isSmaller(i+1,i){
       ^AlgCocktailSort1:17: error: illegal start of simple expression
  }
  ^