sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var a = true
  do {
    a= true
  for (i <- getValueCount()-2 to 0) {
    if isSmaller(i+1,i){
      swap(i,i+1)
      a=false
    }
  }
   for (i <- 0 to getValueCount()-2) {
    if isSmaller(i+1,i){
      swap(i,i+1)
      a=false
    }
  }
} while (a==false)
}